# Supply-chain-world

./: .gitignore  README.md  V1_CHANGE_LOG.md  play.py  pyproject.toml  report_oracle.py  test_world.py
backend/: .gitignore  README.md  V1_CHANGE_LOG.md  play.py  pyproject.toml  report_oracle.py  scan_seeds.py  scan_supplier_seeds.py  test_world.py
backend/docs/superpowers/specs/: 2026-06-18-edge-case-counterfactual-findings.md  2026-06-18-six-module-world-design.md  2026-06-18-world-library-refactor-design.md
backend/src/agent/: README.md  __init__.py  factory.py  play_agent.py  prompt.py  runner.py  service.py  tools.py
backend/src/api/: README.md  app.py
backend/src/world/: README.md  causal_oracle.py  config.py  contracts.py  couplings.py  emission.py  engine.py  logistics.py  modules.py  oracle.py  registry.py  semantics.py  state.py  transition.py
backend/src/world/modules/: README.md  __init__.py  disruption.py  supplier.py
backend/src/world/modules/demand/: __init__.py  config.py  emission.py  factor.py
backend/src/world/modules/disruption/: __init__.py  config.py  emission.py  factor.py  text.py
backend/src/world/modules/freight/: __init__.py  config.py  emission.py  factor.py
backend/src/world/modules/port/: __init__.py  config.py  emission.py  factor.py
backend/src/world/modules/quality/: __init__.py  config.py  emission.py  factor.py
backend/src/world/oracle/: README.md  __init__.py  causal.py  clairvoyant.py
backend/src/world/substrate/: README.md  __init__.py  books.py  logistics.py  semantics.py
frontend/: README.md  index.html  (+1 more)
(+36 files in other folders)
