[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the supply-chain POMDP benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
agent = [
    "deepagents>=0.6.10",
    "langchain-openai>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=1.0,<2.0",
]

dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
